--- a/src/components/ModalSelectPower/ModalSelectPower.css
+++ b/src/components/ModalSelectPower/ModalSelectPower.css
@@ -89,6 +89,8 @@
 #modalSelectPower #powerInfo {
 	bottom: -1px;
 	margin: 0px -1px;
+	max-height: 50%;
+	overflow-y: auto;
 	padding: 0px;
 	position: relative;
 	white-space: normal;
