--- a/src/pages/MainMenu/MainMenu.css
+++ b/src/pages/MainMenu/MainMenu.css
@@ -54,23 +54,33 @@
 
 #mainMenu .menuFooter > a {
 	align-items: center;
-	color: white;
+	color: #e0e0e0;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	margin: 0 40px;
-	padding: 4px 8px;
+	padding: 6px 8px 4px 8px;
 	text-decoration: none;
 	width: 160px;
 }
 
 #mainMenu .menuFooter > a:hover {
 	background-color: var(--main-blue-dark);
+	color: white;
 }
 
 #mainMenu .menuFooter > a img {
 	height: 40px;
 	margin-right: 8px;
 	width: 40px;
+}
+
+#mainMenu .menuFooter > a i {
+	font-size: 13px;
+}
+
+#mainMenu .menuFooter > a b {
+	position: relative;
+	top: -4px;
 }
 
 .Villain #mainMenu .builderPanel {
